--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,36 @@
         <item name="layout_constraintEnd_toEndOf">parent</item>
         <item name="android:background">@drawable/stroke_edt</item>
     </style>
+
+    <style name="title_txv_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/purple_700</item>
+        <item name="android:background">@drawable/corner_txv</item>
+        <item name="android:paddingStart">6dp</item>
+        <item name="android:paddingEnd">6dp</item>
+        <item name="android:paddingTop">3dp</item>
+        <item name="android:paddingBottom">3dp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="layout_constraintEnd_toEndOf">parent</item>
+        <item name="layout_constraintTop_toTopOf">parent</item>
+    </style>
+
+    <style name="edt_style.txv">
+        <item name="android:backgroundTint">#eeeeee</item>
+        <item name="android:backgroundTintMode">add</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="btn_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:minHeight">50dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="cornerRadius">5dp</item>
+    </style>
 </resources>
