--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="_black">#FF000000</color>
     <color name="_white">#FFFFFFFF</color>
+    <color name="red">#cc0000</color>
 </resources>
